# Vector-Race

./: .gitattributes  .gitignore  AI-Driven-Racing-Line-Optimization-Feasibility-Review.docx  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
THIRD_PARTY_LICENSES/: bacinger-f1-circuits-MIT.txt
configs/: default.yaml  silverstone.yaml
src/racing_line/: __init__.py  circuits.py  cli.py  config.py  controller.py  environment.py  f1tenth.py  geometry.py  optimizer.py  pipeline.py  rl.py  safety.py  simulation.py  speed_profile.py  strategy.py  track.py  trajectory.py  tyre_analysis.py  vehicle.py  visualization.py  web_history.py  webapp.py
src/racing_line/data/: README.md
src/racing_line/data/f1_circuits/: README.md
src/racing_line/web/: app.js  index.html  styles.css
tests/: conftest.py  test_circuits_and_history.py  test_cli.py  test_config.py  test_core_algorithms.py  test_pipeline.py  test_rl.py  test_safety.py  test_simulation.py  test_strategy.py  test_track.py  test_tyre_analysis.py  test_variable_grip.py  test_vehicle_and_core.py  test_webapp.py
