[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "racing-line-optimizer"
version = "0.1.0"
description = "Hybrid minimum-curvature and residual-RL racing-line research prototype"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
  "LICENSE",
  "THIRD_PARTY_NOTICES.md",
  "THIRD_PARTY_LICENSES/*.txt",
]
authors = [{name = "Racing Line Project"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
rl = [
  "gymnasium==0.29.1",
  "stable-baselines3>=2.3",
  "tensorboard>=2.15",
]
f1tenth = [
  "gymnasium==0.29.1",
  "f1tenth-gym @ git+https://github.com/f1tenth/f1tenth_gym.git@bdaec1420c3b0f103858d289866d0d4e2e597c30",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
racing-line = "racing_line.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
racing_line = [
  "data/*.csv",
  "data/*.md",
  "web/*.html",
  "web/*.css",
  "web/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
